--- a/debian/changelog
+++ b/debian/changelog
@@ -14,9 +14,9 @@ nvidia-graphics-drivers (195.36.31-91) UNRELEASED; urgency=low
   * Add preliminary Multi-Arch support, can be enabled by setting the
     MULTIARCH variable in debian/rules.defs:
     - Add ${misc:Pre-Depends} to all library packages.
-    - Add #LIBDIR# substitution variable for generated config files.
+    - Add #LIBDIR# substitution variable for generated control files.
   * Add support for installing the libraries of current and legacy drivers in
-    parallel, add #PRIVATE# substitution variable for generated config files.
+    parallel, add #PRIVATE# substitution variable for generated control files.
 
  -- Andreas Beckmann <debian@abeckmann.de>  Wed, 13 Apr 2011 19:50:56 +0200
 
