--- a/debian/changelog
+++ b/debian/changelog
@@ -18,12 +18,8 @@ nvidia-graphics-drivers (270.41.06-1) unstable; urgency=low
   * Update nv-kernel.ids.
   * Update symbols control files.
   * Refresh use-nv-kernel.o.ARCH.patch and fix-typos.patch.
-  * Let nvidia-vdpau-driver Conflicts/Replaces the obsolete transitional
-    package nvidia-libvdpau-dev.
-  * Merge 195.36.31-90 (UNRELEASED).
-  * Merge 195.36.31-91 (UNRELEASED).
+  * Partially merge 195.36.31-91 (UNRELEASED).
     - Update to Standards-Version: 3.9.2.
-    - Add no-smp_lock.patch, fixes build with 2.6.39-rc.
     - Override the experimental lintian tag shlib-calls-exit (libGL.so.*).
     - Support backport specific operations in debian/rules by setting the
       BACKPORT variable in debian/rules.defs.
@@ -32,7 +28,6 @@ nvidia-graphics-drivers (270.41.06-1) unstable; urgency=low
       Add compatibility settings for old Xorg versions for backports only.
     - Add #LIBDIR# and #PRIVATE# substitution variables for generated control
       files.
-  * Drop no-smp_lock.patch, fixed upstream.
 
  -- Andreas Beckmann <debian@abeckmann.de>  Wed, 27 Apr 2011 12:22:39 +0200
 
@@ -88,6 +83,9 @@ nvidia-graphics-drivers (270.30-1) experimental; urgency=low
   * Add package libnvidia-ml1 for the NVIDIA management library (NVML), a new
     library added by upstream.
   * Alternatively depend on xorg-video-abi-10.
+  * Let nvidia-vdpau-driver Conflicts/Replaces the obsolete transitional
+    package nvidia-libvdpau-dev.
+  * Merge 195.36.31-90 (UNRELEASED).
 
  -- Andreas Beckmann <debian@abeckmann.de>  Fri, 18 Mar 2011 12:25:31 +0100
 
