Add nvidia-installer-cleanup as an alternative to nvidia-common.
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/270-beta@1941 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -28,6 +28,7 @@ nvidia-graphics-drivers (270.41.06-1) unstable; urgency=low
       Add compatibility settings for old Xorg versions for backports only.
     - Add #LIBDIR# and #PRIVATE# substitution variables for generated control
       files.
+  * Add nvidia-installer-cleanup as an alternative to nvidia-common.
 
  -- Andreas Beckmann <debian@abeckmann.de>  Wed, 27 Apr 2011 12:22:39 +0200
 
