--- a/debian/changelog
+++ b/debian/changelog
@@ -30,7 +30,7 @@ nvidia-graphics-drivers (270.41.06-1) unstable; urgency=low
       files.
   * Add nvidia-installer-cleanup as an alternative to nvidia-common.
 
- -- Andreas Beckmann <debian@abeckmann.de>  Wed, 27 Apr 2011 12:22:39 +0200
+ -- Andreas Beckmann <debian@abeckmann.de>  Mon, 02 May 2011 15:39:10 -0700
 
 nvidia-graphics-drivers (270.30-1) experimental; urgency=low
 
