--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,7 @@ nvidia-graphics-drivers (195.36.31-91) UNRELEASED; urgency=low
     linux/smp_lock.h (kernel_locked is not used anywhere, so this seems to be
     bitrot).  That header is no longer available in 2.6.39-rc4, so this patch
     fixes build with the kernel in experimental.
+  * Add nvidia-installer-cleanup as an alternative to nvidia-common.
   * Convert nvidia-vdpau-driver{,-ia32} related versioned Conflicts/Replaces
     to Breaks/Replaces.
   * Override the experimental lintian tag shlib-calls-exit (libGL.so.*).
