--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,9 @@ nvidia-graphics-drivers (195.36.31-91) UNRELEASED; urgency=low
     linux/smp_lock.h (kernel_locked is not used anywhere, so this seems to be
     bitrot).  That header is no longer available in 2.6.39-rc4, so this patch
     fixes build with the kernel in experimental.
+  * Add avoid-ld.gold.patch to explicitly link with ld.bfd.  The kernel module
+    built with ld.gold does not work properly.
+    (See #626279, #625761, #617391)
   * Add nvidia-installer-cleanup as an alternative to nvidia-common.
   * Convert nvidia-vdpau-driver{,-ia32} related versioned Conflicts/Replaces
     to Breaks/Replaces.
