--- a/debian/changelog
+++ b/debian/changelog
@@ -20,6 +20,8 @@ nvidia-graphics-drivers (195.36.31-91) UNRELEASED; urgency=low
     diverted file is a symbolic link and points to an actual file.  This
     avoids failures running the triggers on some systems with broken diverted
     files.
+  * Perform the same validation and correction of the diverted symlinks in
+    libgl1-nvidia-alternatives and libgl1-nvidia-alternatives-ia32.
   * Support backport specific operations in debian/rules by setting the
     BACKPORT variable in debian/rules.defs.
   * Set the supported Xorg ABIs in debian/rules.defs, use substvars for Xorg
