--- a/debian/changelog
+++ b/debian/changelog
@@ -15,6 +15,7 @@ nvidia-graphics-drivers (195.36.31-91) UNRELEASED; urgency=low
   * Add nvidia-installer-cleanup as an alternative to nvidia-common.
   * Convert nvidia-vdpau-driver{,-ia32} related versioned Conflicts/Replaces
     to Breaks/Replaces.
+  * Add support for arch-specific overrides (lintian 2.5.0).
   * Override the experimental lintian tag shlib-calls-exit (libGL.so.*).
   * Let the triggers only create the alternatives to diverted libraries if the
     diverted file is a symbolic link and points to an actual file.  This
