Add Depends: nvidia-support to nvidia-glx.  The new support package ships the nvidia-bug-report.sh manpage.
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@2030 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -24,6 +24,8 @@ nvidia-graphics-drivers (195.36.31-91) UNRELEASED; urgency=low
     files.
   * Perform the same validation and correction of the diverted symlinks in
     libgl1-nvidia-alternatives and libgl1-nvidia-alternatives-ia32.
+  * Add Depends: nvidia-support to nvidia-glx.  The new support package ships
+    the nvidia-bug-report.sh manpage.
   * Support backport specific operations in debian/rules by setting the
     BACKPORT variable in debian/rules.defs.
   * Set the supported Xorg ABIs in debian/rules.defs, use substvars for Xorg
