implement conftest.sh function ioremap_cache
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@2041 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -30,6 +30,7 @@ nvidia-graphics-drivers (195.36.31-91) UNRELEASED; urgency=low
     the nvidia-bug-report.sh manpage.
   * Override the binary-without-manpage lintian warning now that we provide a
     manpage (in nvidia-support).
+  * conftest.h: implement conftest.sh function ioremap_cache (270.41.19).
   * Support backport specific operations in debian/rules by setting the
     BACKPORT variable in debian/rules.defs.
   * Set the supported Xorg ABIs in debian/rules.defs, use substvars for Xorg
