--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,20 @@
+nvidia-graphics-drivers (275.09-1) UNRELEASED; urgency=low
+
+  * New upstream beta 275.09 (2011-05-20).
+    - Fixed a bug that caused the pop-out and external DVI displays to go blank
+      on Lenovo ThinkPad W701 laptops.
+    - Fixed a bug that caused corruption on the menus in OpenOffice.org when the
+      screen is rotated.
+    - Improved performance of certain memory allocations.
+    - Fixed a bug that caused Java2D widgets to disappear when Java is
+      configured to render using FBOs.
+    - Added a new X configuration option "BaseMosaic" which can be used to
+      extend a single X screen transparently across all of the available
+      display outputs on each GPU. See "Appendix B. X Config Options" in the
+      README for more information.
+
+ -- Andreas Beckmann <debian@abeckmann.de>  Sat, 28 May 2011 13:31:18 +0200
+
 nvidia-graphics-drivers (270.41.19-1) unstable; urgency=low
 
   * New upstream release 270.41.19 (201-05-20).
