implement checks for generated/compile.h and generated/utsrelease.h (new in 275.09)
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/275.xx@2067 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -15,6 +15,8 @@ nvidia-graphics-drivers (275.09-1) UNRELEASED; urgency=low
   * Update symbols control files.
   * Refresh conditionally-include-linux_version.h.patch and
     use-nv-kernel.o.ARCH.patch.
+  * conftest.h: implement checks for generated/compile.h and
+    generated/utsrelease.h (275.09).
 
  -- Andreas Beckmann <debian@abeckmann.de>  Sat, 28 May 2011 13:31:18 +0200
 
