--- a/debian/changelog
+++ b/debian/changelog
@@ -17,7 +17,8 @@ nvidia-graphics-drivers (195.36.31-91) UNRELEASED; urgency=low
     to Breaks/Replaces.
   * Turn nvidia-glx-ia32 into a transitional package, the libraries have
     been shipped in libgl1-nvidia-glx-ia32 for quite some time.
-  * Add support for arch-specific overrides (lintian 2.5.0).
+  * Convert lintian-overrides to use [arch lists] introduced in lintian 2.5.0.
+    Generate some *-ia32.lintian-overrides by swapping [i386] and [amd64].
   * Override the experimental lintian tag shlib-calls-exit (libGL.so.*).
   * Let the triggers only create the alternatives to diverted libraries if
     the diverted file is a symbolic link and points to an actual file.  This
