--- a/debian/changelog
+++ b/debian/changelog
@@ -31,6 +31,7 @@ nvidia-graphics-drivers (195.36.31-91) UNRELEASED; urgency=low
   * Override the binary-without-manpage lintian warning now that we provide
     a manpage (in nvidia-support).
   * conftest.h: implement conftest.sh function ioremap_cache (270.41.19).
+  * Update Vcs-Browser URL for recent alioth.d.o changes.
   * Support backport specific operations in debian/rules by setting the
     BACKPORT variable in debian/rules.defs.
   * Set the supported Xorg ABIs in debian/rules.defs, use substvars for Xorg
