finalize changes for 275.09.04-1, upload to experimental
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/275.xx@2077 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,6 @@
-nvidia-graphics-drivers (275.09.04-1) UNRELEASED; urgency=low
+nvidia-graphics-drivers (275.09.04-1) experimental; urgency=low
 
-  * New upstream beta 275.09.04 (2011-06-??).
+  * New upstream beta 275.09.04 (2011-06-??).  (Closes: #629513, #627608)
     - Modified the X driver to request that hardware inform the audio driver
       whenever a display is disabled. This will allow the audio driver to
       generate the appropriate jack unplug events to applications.
@@ -10,6 +10,7 @@ nvidia-graphics-drivers (275.09.04-1) UNRELEASED; urgency=low
       for more details.
     - Improved performance of window resize operations in KDE 4 on systems
       with slow CPUs.
+  * Upload to experimental.
   * Update symbols control files.
   * Partially merge 195.36.31-91 (UNRELEASED).
     - Convert lintian-overrides to use [arch lists] introduced in lintian
@@ -18,7 +19,7 @@ nvidia-graphics-drivers (275.09.04-1) UNRELEASED; urgency=low
     - Update Vcs-Browser URL for recent alioth.d.o changes.
   * Add linux3.patch to make the module build on linux-3.0.  (Closes: #628925)
 
- -- Andreas Beckmann <debian@abeckmann.de>  Mon, 06 Jun 2011 17:29:59 +0200
+ -- Andreas Beckmann <debian@abeckmann.de>  Tue, 07 Jun 2011 17:23:57 +0200
 
 nvidia-graphics-drivers (275.09-1) experimental; urgency=low
 
