--- a/debian/changelog
+++ b/debian/changelog
@@ -11,6 +11,7 @@ nvidia-graphics-drivers (195.36.31-91) UNRELEASED; urgency=low
     patch fixes build with the kernel in experimental.
   * Add avoid-ld.gold.patch to explicitly link with ld.bfd.  The kernel
     module built with ld.gold does not work properly.
+  * Add linux3.patch to make the module build on linux-3.0.
   * Add nvidia-installer-cleanup as an alternative to nvidia-common.
   * Drop dependency on nvidia-common in favor of nvidia-installer-cleanup.
   * Convert nvidia-vdpau-driver{,-ia32} related versioned Conflicts/Replaces
