--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,7 @@ nvidia-graphics-drivers (275.09.07-1) UNRELEASED; urgency=low
     - Added support for the following GPUs: GeForce GT 545, GeForce GTX 560,
       GeForce GTX 560M, GeForce 315M, GeForce 320M, GeForce 410M,
       Quadro 3000M, Quadro 4000M, Quadro 5010M.
+  * Update symbols control files.
 
  -- Andreas Beckmann <debian@abeckmann.de>  Wed, 15 Jun 2011 15:08:54 +0200
 
