--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-graphics-drivers (275.09.07-2) UNRELEASED; urgency=low
+
+  [ Andreas Beckmann ]
+
+ -- Andreas Beckmann <debian@abeckmann.de>  Fri, 17 Jun 2011 20:44:52 +0200
+
 nvidia-graphics-drivers (275.09.07-1) unstable; urgency=low
 
   [ Andreas Beckmann ]
