--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 nvidia-graphics-drivers (275.09.07-2) UNRELEASED; urgency=low
 
   [ Andreas Beckmann ]
+  * Override a spelling error in the binary-only part of the kernel module.
 
  -- Andreas Beckmann <debian@abeckmann.de>  Fri, 17 Jun 2011 20:44:52 +0200
 
