--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,11 @@ nvidia-graphics-drivers (275.09.07-2) UNRELEASED; urgency=low
 
   [ Andreas Beckmann ]
   * Override a spelling error in the binary-only part of the kernel module.
+  * Switch to multiarch-aware libGL.* diversion handling provided by the
+    glx-alternatives source package, make old packages transitional packages:
+    - libgl1-nvidia-alternatives -> libgl1-diversions
+    - libglx-nvidia-alternatives -> libglx-diversions
+    (Closes: #630527, #630775, #630579, #630565, #630850)
 
  -- Andreas Beckmann <debian@abeckmann.de>  Fri, 17 Jun 2011 20:44:52 +0200
 
