--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,11 @@ nvidia-graphics-drivers (275.09.07-2) UNRELEASED; urgency=low
     - libgl1-nvidia-alternatives -> libgl1-diversions
     - libglx-nvidia-alternatives -> libglx-diversions
     (Closes: #630527, #630775, #630579, #630565, #630850)
+  * Move handling of alternatives from nvidia-glx and libgl1-nvidia-glx to
+    nvidia-alternative (new package) and glx-alternative-nvidia (from
+    glx-alternatives).  libGL.so.1 and libglx.so (the Xorg module) no longer
+    can be configured independently, avoiding possible mixed NVIDIA/MESA
+    setups.
 
  -- Andreas Beckmann <debian@abeckmann.de>  Fri, 17 Jun 2011 20:44:52 +0200
 
